2004-05-08  MenTaLguY <mental@rydia.net>

	* src/sp-item.cpp: move "transformed" signal emission after actual
	  application of transform

	* src/xml/repr-action.cpp, src/xml/repr-action.h, src/xml/repr.cpp:
	  fix lifecycle issues with content and attribute strings

2004-05-08  Kees Cook <kees@outflux.net>

	* src/verbs.cpp, src/help.cpp: localizing "about" and "keys" stuff.
	* po/*.po: rebuilt for new strings.

2004-05-08  Carl Hetherington <inkscape@carlh.net>

	* src/dialogs/desktop-properties.cpp: the usual cleanups.  Also
	add some sp_document_done()s in various places.

2004-05-08  bulia byak <bulia@users.sourceforge.net>

	* widgets/paint-selector.cpp: Tooltips, slight cosmetics
 
	* main.cpp: --help edit 

	*  sp-use.h sp-use.cpp: Redid move compensation using _transformed_signal

	* sp-item.h sp-item.cpp: Added _transformed_signal, emitted by write_transform,
	passes the difference transform relative to the old one (not the new transform
	set)

	* nodepath.cpp: Fix lagging update of the other handle for smooth nodes 

	* widgets/dash-selector.cpp: (Almost) fixed display of shorter-than-0.5 dashes
	in selector; proper fixing will require manual drawing the dashes instead of
	using gdk dashes

	* preferences-skeleton.h: lots of new  dasharrays 

	* dialogs/stroke-style.cpp: Remove repetitive code; relocation patch from
	mhearn; fixed, reenabled, and automated marker previews (no need for previews
	in markers.svg)

	* share/markers/markers.svg: Cleanup, sizes, remove manual previews 

	* style.cpp: Disabled warning for overflow property (we need it for markers)
 
	* splivarot.cpp: Fixed transform when doing boolop inside group 

	* libnr/nr-path.cpp: Ported fix from sodi, fixes two bugs with endnodes of a
	curve on the same hor/vert line
 
	* sp-namedview.cpp: Use set_default_size instead of _resize for setting window
	from namedview
 
	* preferences-skeleton.h dialogs/item-properties.cpp: Objects props
	transientized (better late than never)
