@@ -1,3 +1,7 @@
+2004-05-08  Kees Cook <kees@outflux.net>
+
+	* src/extension/internal/gdkpixbuf-input.cpp: skip SVG files.
+
 2004-05-08  MenTaLguY <mental@rydia.net>
 
 	* src/sp-item.cpp: move "transformed" signal emission after actual
